k8s/base/namespace.yaml
# TODO: Placeholder Namespace
apiVersion: v1
kind: Namespace
metadata:
  name: distributed-system
