k8s/base/deployment-worker.yaml
# TODO: Placeholder Deployment for Worker Service
apiVersion: apps/v1
kind: Deployment
metadata:
  name: worker-service
# ...
