k8s/base/service-api.yaml
# TODO: Placeholder Service for API Service
apiVersion: v1
kind: Service
metadata:
  name: api-service
spec:
  selector:
    app: api-service
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
