k8s/base/service.yaml
# TODO: Placeholder Service for API Service
apiVersion: v1
kind: Service
metadata:
  name: api-service
# ...
