k8s/base/ingress.yaml
# TODO: Placeholder Ingress for API Service
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api-ingress
# ...
